# karkinos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STRATEGY_EVALUATION.md  WORKTREE_PERMISSIONS.md  pyproject.toml  repro_perf.py
.Jules/: palette.md
.claude-plugin/: marketplace.json
.claude/commands/: issue-worker.md  pr-worker.md  worker-cleanup.md
.claude/skills/issue-worker/: SKILL.md
.claude/skills/pr-worker/: SKILL.md
.claude/skills/worker/: SKILL.md
.jules/: bolt.md  palette.md  sentinel.md
karkinos-plugin/: .mcp.json  README.md
karkinos-plugin/.claude-plugin/: plugin.json
karkinos-plugin/commands/: worker.md
karkinos-plugin/servers/karkinos-mcp/: server.py
karkinos-plugin/skills/bump-version/: SKILL.md
karkinos-plugin/skills/issue-worker/: SKILL.md
karkinos-plugin/skills/watch/: SKILL.md
karkinos-plugin/skills/worker/: SKILL.md
karkinos-plugin/skills/workers/: SKILL.md
src/karkinos/: __init__.py  cli.py  tui.py  utils.py
src/karkinos/data/: __init__.py
src/karkinos/data/commands/: workers.md
src/karkinos/data/skills/issue-worker/: SKILL.md
src/karkinos/data/skills/pr-worker/: SKILL.md
src/karkinos/data/skills/worker/: SKILL.md
src/karkinos/data/skills/worker-cleanup/: SKILL.md
tests/: test_cli_security.py  test_git_security.py  test_mcp_security.py  test_tui_security.py  test_tui_ux.py
