[project]
name = "karkinos"
version = "0.2.1"
description = "Parallel Claude Code workers using git worktrees"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cory" }]
keywords = ["claude", "ai", "worktree", "parallel", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[project.scripts]
karkinos = "karkinos.cli:main"

[project.urls]
Homepage = "https://github.com/schmug/karkinos"
Repository = "https://github.com/schmug/karkinos"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karkinos"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/karkinos/**/*.py",
    "src/karkinos/**/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
